# dns-record-checker

./: .gitignore  .releaserc  CODE_OF_CONDUCT.md  Cargo.toml  README.md  commitlint.config.js  cspell.config.yaml  rustfmt.toml
.cargo/: config.toml
src/: main.rs
